--- a/Styles/_contact.scss
+++ b/Styles/_contact.scss
@@ -110,16 +110,19 @@
         justify-content: center;
         font-size: 2.5rem;
         padding: 2rem;
+        border-radius: 50%;
       }
       a {
         display: flex;
         align-items: center;
         text-align: center;
         justify-content: center;
+        border-radius: 50%;
       }
       i:hover {
         color: white;
         text-shadow: $titlesShadow;
+        border-radius: 50%;
       }
     }
   }
