--- a/Styles/sharingToggle.scss
+++ b/Styles/sharingToggle.scss
@@ -1,19 +1,13 @@
 @import "./variables";
 
 .share-social-media {
-  position: fixed;
-  bottom: -10%;
-  left: -35%;
-  height: 20rem;
+  position: relative;
   display: flex;
-  justify-content: left;
-  align-items: start;
-  width: 40%;
-  margin: 0 30%;
+  width: 30%;
   z-index: 200;
   transform: translateY(-50%);
+  border: red solid 1rem;
   display: none;
-
   i {
     font-size: 3rem;
     color: white;
@@ -31,11 +25,11 @@
   height: 28rem;
   background: transparent;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  // justify-content: center;
+  // align-items: center;
 }
 .sharing-menu .sharing-toggle {
-  position: relative;
+  position: fixed;
   width: 6rem;
   height: 6rem;
   background: $form-BG;
@@ -50,7 +44,7 @@
   transition: 1.25s;
 }
 .sharing-menu.active {
-  bottom: 6rem; /* Position when the menu is open */
+  top: -3rem; /* Position when the menu is open */
   left: 12rem; /* Position when the menu is open */
   z-index: 1100;
   li {
