updated contact pages

--- a/Styles/_contact.scss
+++ b/Styles/_contact.scss
@@ -255,6 +255,9 @@
   .discord-list-item {
     background: #5865f2;
   }
+  .skype-list-item {
+    background: #00aff0;
+  }
 }
 /* Media query for tablets and smaller desktops */
 @media screen and (max-width: 1450px) {
