updated contact pages

--- a/Styles/_contact.scss
+++ b/Styles/_contact.scss
@@ -250,7 +250,7 @@
     background: #181717;
   }
   .xing-list-item {
-    background: #007a33;
+    background: #B7DF4B;
   }
   .discord-list-item {
     background: #5865f2;
