--- a/Styles/_headerNfooter.scss
+++ b/Styles/_headerNfooter.scss
@@ -153,7 +153,7 @@ footer {
   p {
     &::before,
     &::after {
-      content: "\f121";
+      content: "\f5fc";
       font-family: "FontAwesome";
       position: relative;
       padding: 0 15rem;
