--- a/Styles/style.css
+++ b/Styles/style.css
@@ -407,7 +407,7 @@ footer:hover .logo {
   box-shadow: inset 0 0 50px #fff, inset 20px 0 80px #f0f, inset -20px 0 80px #0ff, inset 20px 0 300px #f0f, inset -20px 0 300px #0ff, 0 0 50px #fff, -10px 0 80px #f0f, 10px 0 80px #0ff;
 }
 footer p::before, footer p::after {
-  content: "\f121";
+  content: "\f5fc";
   font-family: "FontAwesome";
   position: relative;
   padding: 0 15rem;
@@ -1184,10 +1184,13 @@ html[data-page=index-german] .h4-title {
   background: #181717;
 }
 .social-media-3d-menu .xing-list-item {
-  background: #007a33;
+  background: #B7DF4B;
 }
 .social-media-3d-menu .discord-list-item {
   background: #5865f2;
+}
+.social-media-3d-menu .skype-list-item {
+  background: #00aff0;
 }
 
 /* Media query for tablets and smaller desktops */
