--- a/Styles/_contact.scss
+++ b/Styles/_contact.scss
@@ -250,13 +250,16 @@
     background: #181717;
   }
   .xing-list-item {
-    background: #B7DF4B;
+    background: #b7df4b;
   }
   .discord-list-item {
     background: #5865f2;
   }
   .skype-list-item {
     background: #00aff0;
+  }
+  .signal-list-item {
+    background: #3ea6e3;
   }
 }
 /* Media query for tablets and smaller desktops */
