--- a/Styles/_contact.scss
+++ b/Styles/_contact.scss
@@ -268,6 +268,8 @@
   box-shadow: $mainShadow;
   background-color: $form-BG;
   max-width: 100%;
+  padding: 0.5rem;
+  margin: 0.5rem;
 }
 /* Media query for tablets and smaller desktops */
 @media screen and (max-width: 1450px) {
