--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1202,6 +1202,8 @@ html[data-page=index-german] .h4-title {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   background-color: rgba(242, 215, 255, 0.6705882353);
   max-width: 100%;
+  padding: 0.5rem;
+  margin: 0.5rem;
 }
 
 /* Media query for tablets and smaller desktops */
