--- a/Styles/_contact.scss
+++ b/Styles/_contact.scss
@@ -37,12 +37,10 @@
       color: $primaryColor;
       border-radius: 50%;
       padding: 1rem;
-      border: $primaryColor outset 0.4rem;
       transition: 1s;
     }
     i:hover {
       transform: scale(1.2);
-      border: $primaryColor inset 0.4rem;
     }
     &:hover {
       text-shadow: 0.1rem 0.2rem 0.4rem rgb(249, 249, 253);
@@ -99,11 +97,14 @@
   .contact-directly {
     display: flex;
     width: 100%;
-    // flex-direction: row;
     li {
       width: 20%;
       border-radius: 50%;
       margin: 0.5rem;
+      border: $primaryColor 0.3rem outset;
+      &:hover {
+        border: $primaryColor 0.3rem inset;
+      }
       i {
         align-items: center;
         text-align: center;
@@ -118,6 +119,7 @@
         text-align: center;
         justify-content: center;
         border-radius: 50%;
+        box-shadow: $mainShadow;
       }
       i:hover {
         color: white;
