--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1037,6 +1037,7 @@ html[data-page=index-german] .h4-title {
   border-radius: 50%;
   margin: 0.5rem;
   border: #a009f7 0.3rem outset;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 .contact-options-divs .contact-directly li:hover {
   border: #a009f7 0.3rem inset;
@@ -1055,7 +1056,6 @@ html[data-page=index-german] .h4-title {
   text-align: center;
   justify-content: center;
   border-radius: 50%;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 .contact-options-divs .contact-directly li i:hover {
   color: white;
@@ -1256,6 +1256,9 @@ html[data-page=index-german] .h4-title {
   }
   #social-media-3d {
     display: none;
+  }
+  .business-card img {
+    width: 85%;
   }
 }
 /* Media query for mobile phones */
