correction contact bubbles

--- a/Styles/_contact.scss
+++ b/Styles/_contact.scss
@@ -106,6 +106,7 @@
 
       &:hover {
         border: $primaryColor 0.3rem inset;
+        background-color: $form-BG;
       }
       i {
         align-items: center;
