--- a/Styles/_portfolioItems.scss
+++ b/Styles/_portfolioItems.scss
@@ -8,6 +8,9 @@
   padding: 0 1rem;
   margin: 1.5rem 0 0 0;
   .portfolio-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     padding: 1rem;
     margin: 0 0 2rem 0;
     width: calc(33.33% - 1.25rem);
