--- a/Styles/_portfolioItems.scss
+++ b/Styles/_portfolioItems.scss
@@ -30,6 +30,9 @@
       box-shadow: $mainShadow;
       transform: scale(1.05);
       z-index: 1000;
+      p {
+        display: flex;
+      }
       .portfolio-item-image {
         display: flex;
         flex-direction: column;
@@ -41,6 +44,7 @@
     p {
       margin-bottom: 1.5rem;
       font-size: x-large;
+      display: none;
     }
     a {
       display: flex;
@@ -62,7 +66,6 @@
       width: 100%;
       max-width: 100%;
       height: auto;
-      display: none;
       img {
         padding: 0;
         max-width: 100%;
