--- a/Styles/style.css
+++ b/Styles/style.css
@@ -253,6 +253,10 @@ button:hover {
   }
 }
 /* outer right cyan */
+.backupH1Title {
+  display: none;
+}
+
 /* header designs and settings */
 header {
   display: flex;
@@ -1607,9 +1611,7 @@ a:hover ~ .custom-cursor {
   display: flex;
   width: 30%;
   z-index: 200;
-  transform: translateY(-50%);
   border: red solid 1rem;
-  display: none;
 }
 .share-social-media i {
   font-size: 3rem;
@@ -1628,6 +1630,8 @@ a:hover ~ .custom-cursor {
   height: 28rem;
   background: transparent;
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .sharing-menu .sharing-toggle {
@@ -1640,15 +1644,12 @@ a:hover ~ .custom-cursor {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: black;
   cursor: pointer;
   font-size: 2em;
   transition: 1.25s;
 }
 
 .sharing-menu.active {
-  top: -3rem; /* Position when the menu is open */
-  left: 12rem; /* Position when the menu is open */
   z-index: 1100;
 }
 .sharing-menu.active li {
@@ -1707,8 +1708,6 @@ a:hover ~ .custom-cursor {
 @media screen and (max-width: 1110px) {
   .share-social-media {
     transform: scale(0.7);
-    bottom: 1%;
-    left: -40%;
   }
 }
 @media screen and (max-width: 1000px) {
