--- a/Styles/style.css
+++ b/Styles/style.css
@@ -211,6 +211,41 @@ h5:hover {
   color: #a009f7;
 }
 
+#about .intro-paragraph {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#about .intro-paragraph ul {
+  font-size: 1.5rem;
+}
+
+.intro {
+  display: flex;
+}
+
+.sub-menu ul {
+  display: flex;
+}
+.sub-menu ul li {
+  margin: 1rem;
+  padding: 0.6rem;
+  text-shadow: #fff 0px 0px 5px, #fff 0px 0px 10px, #fff 0px 0px 15px, 2px 2px 2px rgba(255, 255, 255, 0.04);
+  color: #a009f7;
+  font-weight: 500;
+  justify-content: space-between;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  border-radius: 2rem;
+  justify-content: center;
+  text-align: center;
+}
+.sub-menu ul li:hover {
+  font-weight: 600;
+  box-shadow: inset 0 0 50px #fff, inset 20px 0 80px #f0f, inset -20px 0 80px #0ff, inset 20px 0 300px #f0f, inset -20px 0 300px #0ff, 0 0 50px #fff, -10px 0 80px #f0f, 10px 0 80px #0ff;
+}
+
 .title-span {
   font-size: 2rem;
   font-weight: bolder;
@@ -240,6 +275,34 @@ button:hover {
   transition: 1s;
 }
 
+@media screen and (max-width: 1200px) {
+  .sub-menu ul {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column !important;
+  }
+  .sub-menu ul li {
+    font-size: 1.3rem;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+  }
+  .intro {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+}
+@media screen and (max-width: 670px) {
+  .intro-paragraph ul {
+    flex-direction: column;
+  }
+  .intro-paragraph ul li {
+    font-size: 1rem;
+  }
+}
 @media screen and (max-width: 480px) and (orientation: portrait) {
   body {
     overflow-x: hidden;
@@ -493,7 +556,7 @@ footer .logo img {
   border-radius: 4rem;
   margin: 2rem 1rem 0 2rem;
   border: 0.5rem outset;
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 .paragraph-div img:hover {
   border-color: #a009f7;
@@ -512,6 +575,7 @@ footer .logo img {
   height: auto;
   border-color: #a009f7;
   bottom: -40%;
+  display: none;
 }
 
 @media screen and (max-width: 1800px) {
