--- a/Styles/style.css
+++ b/Styles/style.css
@@ -240,10 +240,12 @@ h5:hover {
   border-radius: 2rem;
   justify-content: center;
   text-align: center;
+  border: #a009f7 outset 0.15rem;
 }
 .sub-menu ul li:hover {
   font-weight: 600;
   box-shadow: inset 0 0 50px #fff, inset 20px 0 80px #f0f, inset -20px 0 80px #0ff, inset 20px 0 300px #f0f, inset -20px 0 300px #0ff, 0 0 50px #fff, -10px 0 80px #f0f, 10px 0 80px #0ff;
+  border: transparent;
 }
 
 .title-span {
@@ -736,6 +738,9 @@ html[data-page=index-german] .h4-title {
   border: 0.1rem solid rgba(255, 255, 255, 0);
   border-radius: 50%;
   text-align: center;
+  text-shadow: #fff 0px 0px 5px, #fff 0px 0px 10px, #fff 0px 0px 15px, 2px 2px 2px rgba(255, 255, 255, 0.04);
+  background-color: rgba(242, 215, 255, 0.8235294118);
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
 .skills-table table td:hover {
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
@@ -744,6 +749,10 @@ html[data-page=index-german] .h4-title {
   transition: 1s;
   border-radius: 50%;
   background-color: rgba(242, 215, 255, 0.8235294118);
+}
+.skills-table table td:hover i {
+  text-shadow: 6px 0 6px #a408ff, 5px 5px 5px #d26df7, 0 6px 6px rgba(79, 164, 250, 0.7215686275);
+  color: #ffffff;
 }
 .skills-table table i {
   padding: 1rem;
@@ -779,8 +788,8 @@ html[data-page=index-german] .h4-title {
   min-width: 20rem;
   min-height: 19rem;
   background-color: #c6acf0;
-  border: 0.8rem outset #a009f7;
-  border-radius: 1.5rem;
+  border: 0.4rem outset #a009f7;
+  border-radius: 5.5rem;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
@@ -789,7 +798,7 @@ html[data-page=index-german] .h4-title {
 .portfolio-items .portfolio-item:hover {
   background-color: rgba(160, 235, 130, 0.5215686275);
   background-image: radial-gradient(rgba(0, 153, 255, 0.5), rgba(123, 255, 0, 0.5), rgba(255, 0, 255, 0.5), rgba(255, 251, 4, 0.5));
-  border: outset transparent;
+  border: transparent;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   transform: scale(1.05);
   z-index: 1000;
