--- a/Styles/style.css
+++ b/Styles/style.css
@@ -787,7 +787,7 @@ html[data-page=index-german] .h4-title {
   max-width: 35rem;
   min-width: 20rem;
   min-height: 19rem;
-  background-color: #c6acf0;
+  background-color: #d1b5fd;
   border: 0.4rem outset #a009f7;
   border-radius: 5.5rem;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
@@ -874,6 +874,10 @@ html[data-page=index-german] .h4-title {
 }
 .show-all:target {
   display: flex;
+}
+
+.show-all-button {
+  display: none;
 }
 
 .elements-table tr td i {
