--- a/Styles/style.scss
+++ b/Styles/style.scss
@@ -12,4 +12,6 @@
 @import "./styleFiles";
 @import "./cursor";
 @import "./sharingToggle";
+@import "./variables-dark";
 // Style.scss - the main scss file.
+
