--- a/Styles/style.scss
+++ b/Styles/style.scss
@@ -12,6 +12,5 @@
 @import "./styleFiles";
 @import "./cursor";
 @import "./sharingToggle";
-@import "./variables-dark";
+@import "./timelineStyle";
 // Style.scss - the main scss file.
-
