--- a/Styles/style_resume.css
+++ b/Styles/style_resume.css
@@ -12,6 +12,10 @@
   color-scheme: light;
 }
 
+#resume-book {
+  text-shadow: 6px 0 6px #a408ff, 5px 5px 5px #d26df7, 0 6px 6px rgba(79, 164, 250, 0.7215686275);
+}
+
 .main-resume {
   display: flex;
   justify-content: center;
