--- a/Styles/style.css
+++ b/Styles/style.css
@@ -79,7 +79,7 @@ h4 {
   letter-spacing: 0.2rem;
   border-radius: 2rem;
   padding: 0.5rem 1rem;
-  text-shadow: 6px 0 6px #a408ff, 5px 5px 5px #d26df7, 0 6px 6px rgba(79, 164, 250, 0.7215686275);
+  text-shadow: 6px 0 6px #a408ff, 5px 5px 5px #d26df7, 0 6px 6px rgba(79, 164, 250, 0.7215686275) !important;
 }
 
 .h2-title,
@@ -1417,8 +1417,8 @@ html[data-page=index-german] .h4-title {
   height: 2rem;
   top: 6rem;
   left: 3rem;
-  background-color: rgb(246, 70, 205);
-  border: rgb(246, 70, 205) 0.5rem solid;
+  background-color: rgb(248, 86, 210);
+  border: rgb(248, 86, 210) 0.5rem solid;
   border-bottom-left-radius: 3rem;
   border-bottom-right-radius: 3rem;
 }
@@ -1465,8 +1465,8 @@ html[data-page=index-german] .h4-title {
   height: 0.6rem;
   top: 5.5rem;
   left: 2.5rem;
-  background-color: rgb(246, 70, 205);
-  border: 0.4rem solid rgb(246, 70, 205);
+  background-color: rgb(248, 86, 210);
+  border: 0.4rem solid rgb(248, 86, 210);
   border-bottom-left-radius: 0rem;
   border-bottom-right-radius: 0rem;
   position: absolute;
@@ -1808,6 +1808,178 @@ a:hover ~ .custom-cursor {
     display: none;
   }
 }
+/* outer right cyan */
 #my-timeline-resume {
   text-shadow: 6px 0 6px #a408ff, 5px 5px 5px #d26df7, 0 6px 6px rgba(79, 164, 250, 0.7215686275);
+}
+
+.container-timeline {
+  width: 80%;
+  height: auto;
+  position: relative;
+  text-align: left;
+  border-radius: 3rem;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+  border: #a009f7 0.2rem outset;
+}
+
+.container-timeline::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 0.3rem; /* Thickness of the line */
+  height: 100%;
+  background-image: linear-gradient(to bottom, #a009f7, rgb(248, 86, 210));
+  border-radius: 1rem; /* Optional: adds rounded edges to the line */
+}
+
+.container-timeline::after {
+  content: "";
+  display: table;
+  clear: both;
+  width: 0.2rem;
+  background-image: linear-gradient(to bottom, #a009f7, rgb(248, 86, 210));
+  height: 100%;
+  position: relative;
+}
+
+.container-timeline::after {
+  content: " ";
+  width: 0.2rem;
+  height: 100%;
+  background-image: linear-gradient(to bottom, #a009f7, rgb(248, 86, 210));
+}
+
+.container-timeline ul li {
+  width: 45%;
+  height: auto;
+  padding: 1.5rem 1rem;
+  margin: 2rem 0.7rem;
+  background-color: rgba(242, 215, 255, 0.8235294118);
+  border-radius: 1rem;
+  box-shadow: 1px 1px 25px rgba(0, 0, 0, 0.3607843137);
+  z-index: 99;
+  position: relative;
+}
+
+.container-timeline ul li:hover {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+
+.container-timeline ul li:hover .circle {
+  box-shadow: inset 0 0 50px #fff, inset 20px 0 80px #f0f, inset -20px 0 80px #0ff, inset 20px 0 300px #f0f, inset -20px 0 300px #0ff, 0 0 50px #fff, -10px 0 80px #f0f, 10px 0 80px #0ff;
+}
+
+.container-timeline ul li h3 {
+  font-size: 2rem;
+}
+
+.container-timeline ul li i {
+  padding: 0.7rem;
+  font-size: 2rem;
+  color: #fff;
+  text-shadow: 6px 0 6px #a408ff, 5px 5px 5px #d26df7, 0 6px 6px rgba(79, 164, 250, 0.7215686275);
+  border-radius: 1rem;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+
+.container-timeline ul li p {
+  padding: 0.5rem;
+  margin: 0.5rem;
+  font-size: 1.5rem;
+}
+
+.container-timeline ul li:nth-child(odd) {
+  float: left;
+  clear: right;
+  border: #9d62eb 0.2rem outset;
+  transform: translateX(-0.1rem);
+  text-align: right;
+}
+
+.container-timeline ul li:nth-child(even) {
+  float: right;
+  clear: left;
+  border: rgb(248, 86, 210) 0.2rem outset;
+  transform: translateX(0.1rem);
+}
+
+.container-timeline ul li:nth-child(1) {
+  margin-top: 5rem;
+}
+
+.container-timeline ul li .circle {
+  border-radius: 50%;
+  width: 2.5rem;
+  height: 2.5rem;
+  background-image: linear-gradient(to right, #a009f7, rgb(248, 86, 210));
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.container-timeline ul li .date {
+  font-size: 1.65rem;
+  position: absolute;
+  top: -3.5rem;
+  width: 15rem;
+  height: 3rem;
+  background-image: linear-gradient(to right, #a009f7, rgb(248, 86, 210));
+  border-radius: 1rem;
+  color: white;
+  text-align: center;
+  padding: 0.4rem;
+  display: grid;
+  place-items: center;
+}
+
+.container-timeline ul li .circle::after {
+  content: " ";
+  width: 1.3rem;
+  height: 1.3rem;
+  background-color: rgba(242, 215, 255, 0.8235294118);
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.container-timeline ul li:nth-child(odd) .circle {
+  left: auto;
+  right: -3.7rem;
+  transform: translate(50%, -50%);
+}
+
+.container-timeline ul li:nth-child(even) .circle {
+  right: auto;
+  left: -3.7rem;
+  transform: translate(-50%, -50%);
+}
+
+.container-timeline ul li:nth-child(odd) .date {
+  right: 2rem;
+}
+
+@media screen and (max-width: 1700px) {
+  .container-timeline ul li .circle {
+    display: none;
+  }
+}
+@media screen and (max-width: 900px) {
+  .container-timeline ul li {
+    width: 45%;
+    transform: scale(0.6);
+  }
+  .container-timeline ul li .date {
+    width: 100%;
+    margin: -1rem;
+  }
+}
+@media screen and (max-width: 600px) {
+  .container-timeline {
+    display: none;
+  }
 }/*# sourceMappingURL=style.css.map */
